Refactor Image Resource/Repository
